--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,6 +24,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="">Quienes Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="">Servicios y productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="~/home/Formulario">Formulario de Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="" asp-action="">Usuario Registro</a>
+                        </li>
                     </ul>
                 </div>
             </div>
